--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Wedding &mdash;Nishant Dimple's Engagement</title>
+	<title>Nishant Madhvi(Dimple)'s Engagement</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -115,7 +115,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Nishant &amp; Dimple</h1>
+							<h1>Nishant &amp; Madhvi</h1>
 							<h2>Are Getting Engaged</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
@@ -131,7 +131,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Hello!</h2>
-					<h3>October 31st, 2022@Ragunath Palace,Aligarh</h3>
+					<h3>October 31st, 2022@ Ragunath Palace,G.T.Road,Aligarh</h3>
 					<p>We invited you to celebrate the engagement</p>
 				</div>
 			</div>
@@ -142,7 +142,7 @@
 					</div>
 					<div class="desc-groom">
 						<h3>Nishant Varshney</h3>
-						<p>An Enginner by profession, A poet by heart! Getting fall for Dimple</p>
+						<p>An Enginner by profession, A poet by heart! Getting fall for Madhvi(Dimple)</p>
 					</div>
 				</div>
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
@@ -151,7 +151,7 @@
 						<img src="images/bride.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
-						<h3>Dimple Varshney</h3>
+						<h3>Madhvi Varshney(Dimple)</h3>
 						<p>A loving person with all over the engineer's emotions! Getting fall for Nishant</p>
 					</div>
 				</div>
@@ -173,12 +173,12 @@
 					<div class="display-tc">
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
-								<div class="event-wrap animate-box">
+								<div class="event-wrap animate-box" style="width:98%">
 									<h3>Ring Ceremony</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>4:00 PM</span>
-										<span>9:00 PM</span>
+										<span>3:00 PM</span>
+										<span>10:00 PM</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
@@ -188,12 +188,12 @@
 									<p>A ceremony for exchanging the love to each other in the form of rings.Please be gather for us to make this moment more joyful.</p>
 								</div>
 							</div>
-							<div class="col-md-6 col-sm-4 text-center">
+							<div class="col-md-6 col-sm-4 text-center" style="width:98%">
 								<div class="event-wrap animate-box">
 									<h3>Location</h3>
 									<div class="iframe-pad">
 										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3525.968075637375!2d78.04898861506638!3d27.902952982711238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3974a4451c29342b%3A0x3d2f44473e2dbaad!2sRaghunath%20Palace!5e0!3m2!1sen!2sin!4v1665299869959!5m2!1sen!2sin"
-												width="370" height="205" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+												width="300" height="205" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 										<!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2338.5936710500823!2d77.09152072780377!3d28.667963576860263!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa15c7ff58eabbf58!2sRadisson%20Blu%20Hotel%20New%20Delhi%20Paschim%20Vihar!5e0!3m2!1sen!2sin!4v1648569800675!5m2!1sen!2sin" style="border:solid;" width="300" height="300" allowfullscreen="" loading="lazy"></iframe>
 									    -->
 									</div>
