--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
 	<![endif]-->
 
 	</head>
-	<body>
+	<body onclick="initSong()">
 		
 	<div class="fh5co-loader"></div>
-	
 	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
@@ -80,27 +79,28 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-					<!--	<li><a href="about.html">Story</a></li>
-						<li class="has-dropdown">
-							<a href="services.html">Services</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
-						<li class="has-dropdown">
-							<a href="gallery.html">Gallery</a>
-							<ul class="dropdown">
-								<li><a href="#">HTML5</a></li>
-								<li><a href="#">CSS3</a></li>
-								<li><a href="#">Sass</a></li>
-								<li><a href="#">jQuery</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Contact</a></li>
-						-->
+						<li class="active"><a href="#" onclick="playSongs()">Toggle Music</a></li>
+						<!--	<li><a href="about.html">Story</a></li>
+                            <li class="has-dropdown">
+                                <a href="services.html">Services</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">Web Design</a></li>
+                                    <li><a href="#">eCommerce</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">API</a></li>
+                                </ul>
+                            </li>
+                            <li class="has-dropdown">
+                                <a href="gallery.html">Gallery</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">HTML5</a></li>
+                                    <li><a href="#">CSS3</a></li>
+                                    <li><a href="#">Sass</a></li>
+                                    <li><a href="#">jQuery</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="contact.html">Contact</a></li>
+                            -->
 					</ul>
 				</div>
 			</div>
@@ -636,6 +636,27 @@
         day: d.getDate(),
         enableUtc: false
     });
+
+
+    function initSong() {
+    if(!window.weddingSong) {
+        playSongs();
+    }
+}
+
+function playSongs() {
+    if(!window.weddingSong) {
+        window.weddingSong = new Audio('music/song1.mp3');
+        window.weddingSong.loop = true;
+        window.weddingSong.play();
+    }
+
+    else {
+        if(window.weddingSong.paused)
+            window.weddingSong.play();
+        else window.weddingSong.pause();
+    }
+}
 </script>
 
 	</body>
