--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="#">Invitation<strong>.</strong></a></div>
+					<div id="fh5co-logo"><a href="#">Invitation<strong></strong></a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="#">Home</a></li>
 						<li class="active"><a href="#" onclick="playSongs()">Toggle Music</a></li>
+						<li class="active"><a href="#invitation_card">Invitation Card</a></li>
 						<!--	<li><a href="about.html">Story</a></li>
                             <li class="has-dropdown">
                                 <a href="services.html">Services</a>
@@ -213,6 +214,25 @@
 								-->
 								</div>
 							</div>
+
+							<div class="col-md-6 col-sm-4 text-center" style="width:98%">
+								<div class="event-wrap animate-box">
+									<a id="invitation_card">
+									<h3>Card</h3>
+									<ul id="fh5co-gallery-list">
+										<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/ECard_Nishant.jpeg); ">
+											<!--<a href="#">
+												<div class="case-studies-summary">
+													<span>Invitation</span>
+													<h2>Nishant & Madhvi(Dimple)</h2>
+												</div>
+											</a>
+											-->
+										</li>
+									</ul>
+									</a>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -273,13 +293,14 @@
 			</div>
 		</div>
 	</div>
-
+-->
+		<!--
 	<div id="fh5co-gallery" class="fh5co-section-gray">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>Our Memories</span>
-					<h2>Wedding Gallery</h2>
+					<h2>Card</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 				</div>
 			</div>
@@ -287,14 +308,15 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
-						<a href="images/gallery-1.jpg">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/ECard_Nishant.jpeg); ">
+						<a href="#">
 							<div class="case-studies-summary">
-								<span>14 Photos</span>
-								<h2>Two Glas of Juice</h2>
+								<span>Invitation</span>
+								<h2>Nishant & Madhvi(Dimple)</h2>
 							</div>
 						</a>
 					</li>
+
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
 						<a href="#" class="color-2">
 							<div class="case-studies-summary">
@@ -303,8 +325,6 @@
 							</div>
 						</a>
 					</li>
-
-
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
 						<a href="#" class="color-3">
 							<div class="case-studies-summary">
@@ -364,12 +384,13 @@
 								</div>
 							</a>
 						</li>
-					</ul>		
+					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
-
+	-->
+<!--
 	<div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
