--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<ul>
 						<li class="active"><a href="#">Home</a></li>
 						<li class="active"><a href="#" onclick="playSongs()">Toggle Music</a></li>
-						<li class="active"><a href="#invitation_card">Invitation Card</a></li>
+						<!--<li class="active"><a href="#invitation_card">Invitation Card</a></li>-->
 						<!--	<li><a href="about.html">Story</a></li>
                             <li class="has-dropdown">
                                 <a href="services.html">Services</a>
