--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<ul>
 						<li class="active"><a href="#">Home</a></li>
 						<li class="active"><a href="#" onclick="playSongs()">Toggle Music</a></li>
-						<!--<li class="active"><a href="#invitation_card">Invitation Card</a></li>-->
+						<li class="active"><a href="images/card.pdf">Invitation Card</a></li>
 						<!--	<li><a href="about.html">Story</a></li>
                             <li class="has-dropdown">
                                 <a href="services.html">Services</a>
@@ -220,7 +220,7 @@
 									<a id="invitation_card">
 									<h3>Card</h3>
 									<ul id="fh5co-gallery-list">
-										<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/ECard_Nishant.jpeg); ">
+										<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/card.jpeg); ">
 											<!--<a href="#">
 												<div class="case-studies-summary">
 													<span>Invitation</span>
@@ -308,7 +308,7 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/ECard_Nishant.jpeg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/card.jpeg); ">
 						<a href="#">
 							<div class="case-studies-summary">
 								<span>Invitation</span>
